fix: two scrollbars

--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -2,6 +2,10 @@
 @import "vars";
 @import "animations";
 
+html {
+  overflow: hidden;
+}
+
 html,
 body {
   height: 100%;
